# konamall2

./: .env.production.example  .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  deploy.bat  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.cursor/rules/: backend-python.mdc  frontend-react.mdc  git-commit.mdc  project-conventions.mdc
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_product_variants_and_order_id.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/: admin.py  cart.py  orders.py  payments.py  products.py  suppliers.py  users.py
backend/app/connectors/: __init__.py  aliexpress.py  amazon.py  base.py  exceptions.py  temu.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: models.py
backend/app/schemas/: order.py  product.py  supplier.py  user.py
backend/app/services/: __init__.py  payment.py
backend/app/tasks/: notifications.py  order_process.py  product_sync.py
backend/scripts/: seed_users.py
backend/tests/: conftest.py  test_health.py
docs/: AWS_SETUP_GUIDE.md  OPERATION_READINESS.md  PROJECT_REVIEW.md  RUN.md  openapi.yaml
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/public/: manifest.json  robots.txt
frontend/src/app/: globals.css  layout.tsx  page.tsx
nginx/: nginx.conf
nginx/conf.d/: README.md  default.conf.prod  dev.conf
nginx/ssl/: README.md
(+38 files in other folders)
